Añade pagina productos y categorias Se corrige front para que sea response Se modifica css de footer , header , home y editar perfil

--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,5 +1,30 @@
-.footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+ion-header {
+    font-family: 'Montserrat', sans-serif;
+}
+
+ion-button {
+    color: var(--ion-color-primary);
+}
+
+.left-menu {
+    ion-list {
+        ion-item {
+
+            ion-label {
+                --color: var(--ion-color-primary);
+            }
+
+            ion-icon {
+                color: var(--ion-color-primary);
+            }
+        }
+    }
+}
+
+.login {
+    ion-list {
+        ion-item {
+            --color: var(--ion-color-primary);
+        }
+    }
 }
