--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,10 +1,3 @@
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-  rel="stylesheet"
-/>
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -20,23 +13,23 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button id="profile-menu">
-            <div *ngIf="userData !== undefined">
-              <p style="text-align: center">
-                " {{userData.username_user}} "
-              </p>
-            </div>
-            <div *ngIf="userData === undefined">
-              <p style="text-align: center">
-                Iniciar sesion
-              </p>
-            </div>
-        <ion-icon name="person-circle"></ion-icon>
+        <div *ngIf="userData !== undefined">
+          <p style="text-align: center">
+            " {{userData.username_user}} "
+          </p>
+        </div>
+        <div *ngIf="userData === undefined">
+          <p style="text-align: center">
+            Iniciar sesion
+          </p>
+        </div>
+        <ion-icon name="person-circle" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-popover trigger="slide-menu" [dismissOnSelect]="true">
+<ion-popover trigger="slide-menu" [dismissOnSelect]="true" class="left-menu">
   <ng-template>
     <ion-content style="border-radius: 50">
       <ion-list>
@@ -57,39 +50,21 @@
   </ng-template>
 </ion-popover>
 
-<ion-popover trigger="profile-menu" [dismissOnSelect]="true">
+<ion-popover trigger="profile-menu" [dismissOnSelect]="true" class="login">
   <ng-template>
     <ion-content *ngIf="userData">
       <ion-list>
-        <ion-item
-          [button]="true"
-          [detail]="false"
-          (click)="prueba()"
-          [routerLink]="['/editar-perfil']"
-          >editar perfil</ion-item
-        >
+        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/editar-perfil']">editar
+          perfil</ion-item>
         <ion-item [button]="true" [detail]="false">configuracion</ion-item>
-        <ion-item [button]="true" [detail]="false" (click)="logout()"
-          >cerrar sesion</ion-item
-        >
+        <ion-item [button]="true" [detail]="false" (click)="logout()">cerrar sesion</ion-item>
       </ion-list>
     </ion-content>
     <ion-content *ngIf="!userData">
       <ion-list>
-        <ion-item
-          [button]="true"
-          [detail]="false"
-          (click)="prueba()"
-          [routerLink]="['/login']"
-          >iniciar sesion</ion-item
-        >
-        <ion-item
-          [button]="true"
-          [detail]="false"
-          (click)="prueba()"
-          [routerLink]="['/singup']"
-          >registrarse</ion-item
-        >
+        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/login']">iniciar
+          sesion</ion-item>
+        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/singup']">registrarse</ion-item>
       </ion-list>
     </ion-content>
   </ng-template>
