--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,7 @@
 
-
 <ion-content>
   <app-header [userData]="userData" ></app-header>
-  <app-banner [slides]="slides"></app-banner>
+  <app-banner [banners]="banners"></app-banner>
   <app-vista-productos [products]="products"></app-vista-productos>
   <app-footer></app-footer>
 </ion-content>
