--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,6 +2,6 @@
 <ion-content>
   <app-header [userData]="userData" ></app-header>
   <app-banner [banners]="banners"></app-banner>
-  <app-vista-productos [products]="products"></app-vista-productos>
+  <app-vista-productos [products]="products" [mainCategories]="mainCategories"></app-vista-productos>
   <app-footer></app-footer>
 </ion-content>
