--- a/src/app/pages/home/vista-productos/vista-productos.component.scss
+++ b/src/app/pages/home/vista-productos/vista-productos.component.scss
@@ -14,38 +14,38 @@ swiper-container {
   --swiper-navigation-sides-offset: 10px;
   --swiper-navigation-color: var(--swiper-theme-color);
 }
-
 swiper-slide {
-  display: flex;
-  position: relative;
-
-  flex-direction: column;
-  flex-shrink: 0;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  display: flex;
+}
 
+swiper-slide ion-card {
   width: 100%;
   height: 100%;
-
-  font-size: 18px;
-
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s;
+  --box-shadow: none;
   text-align: center;
 }
-swiper-slide img {
-  width: auto;
-  max-width: 100%;
-  height: auto;
-  max-height: 100%;
-}
 
-ion-card {
+swiper-slide div{
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  text-align: center;
   justify-content: center;
   align-items: center;
-  background-color: var(--ion-color-step-50, #f4f5f8);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+}
+.titulos{
+  text-align: center;
+  color: #5321BF;
 }
