--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -35,7 +35,7 @@
   </form>
 
   <div class="button-container-login">
-    <ion-button (click)="onLogin()" color="primary" [routerLink]="['/home']">Iniciar sesión</ion-button>
+    <ion-button (click)="onLogin()" color="primary">Iniciar sesión</ion-button>
     <ion-button (click)="signInWithFB()" class="social" color="primary">
       <ion-icon name="logo-facebook"></ion-icon>
       Acceder con Facebook
