--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -4,19 +4,26 @@
       <ion-button id="slide-menu">
         <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
       </ion-button>
+      <div class="toolbar-row">
+        <ion-button [routerLink]="['/login']">
+          <ion-label>Categorias</ion-label>
+        </ion-button>
+        <ion-button [routerLink]="['/login']">
+          <ion-label>Ofertas</ion-label>
+        </ion-button>
+        <ion-button [routerLink]="['/login']">
+          <ion-label>XXXXXXXX</ion-label>
+        </ion-button>
+      </div>
     </ion-buttons>
-    <ion-title>Markmelo</ion-title>
+    <ion-title mode="ios">Markmelo</ion-title>
     <ion-buttons slot="end">
       <ion-button id="profile-menu">
         <div *ngIf="userData !== undefined">
-          <p style="text-align: center">
-            " {{userData.username_user}} "
-          </p>
+          <p class="prueba">" {{ userData.username_user }} "</p>
         </div>
         <div *ngIf="userData === undefined">
-          <p style="text-align: center">
-            Iniciar sesion
-          </p>
+          <p class="prueba">Iniciar sesion</p>
         </div>
         <ion-icon name="person-circle" size="large"></ion-icon>
       </ion-button>
@@ -28,17 +35,17 @@
   <ng-template>
     <ion-content style="border-radius: 50">
       <ion-list>
-        <ion-item [button]="true" [detail]="false" (click)="prueba()">
-          <ion-icon name="time-outline"> </ion-icon>
-          <ion-label>Categorias</ion-label>
+        <ion-item [button]="true" [detail]="false">
+          <ion-icon name="apps"> </ion-icon>
+          <ion-label style="padding: 1rem;">Categorias</ion-label>
         </ion-item>
         <ion-item [button]="true" [detail]="false">
-          <ion-icon name="file-tray-full-outline"></ion-icon>
-          <ion-label>Carrito</ion-label>
+          <ion-icon name="cart"></ion-icon>
+          <ion-label style="padding: 1rem;">Carrito</ion-label>
         </ion-item>
         <ion-item [button]="true" [detail]="false">
-          <ion-icon name="document-attach-outline"></ion-icon>
-          <ion-label>Deseados</ion-label>
+          <ion-icon name="heart"></ion-icon>
+          <ion-label style="padding: 1rem;">Deseados</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
@@ -47,19 +54,32 @@
 
 <ion-popover trigger="profile-menu" [dismissOnSelect]="true" class="login">
   <ng-template>
-    <ion-content *ngIf="userData">
+    <ion-content *ngIf="userData;">
       <ion-list>
-        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/editar-perfil']">editar
-          perfil</ion-item>
-        <ion-item [button]="true" [detail]="false">configuracion</ion-item>
-        <ion-item [button]="true" [detail]="false" (click)="logout()">cerrar sesion</ion-item>
+        <ion-item
+          [detail]="false"
+          [button]="true"
+          [routerLink]="['/editar-perfil']"
+          >
+          <ion-label aria-flowto="true">{{userData.username_user}}</ion-label> 
+          <ion-icon name="create" color="primary"></ion-icon>
+        </ion-item>
+        <ion-item 
+          [button]="true" 
+          [detail]="false" 
+          (click)="makeLogout()"
+          >cerrar sesion</ion-item
+        >
       </ion-list>
     </ion-content>
     <ion-content *ngIf="!userData">
       <ion-list>
-        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/login']">iniciar
-          sesion</ion-item>
-        <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/singup']">registrarse</ion-item>
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/login']"
+          >iniciar sesion</ion-item
+        >
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/singup']"
+          >registrarse</ion-item
+        >
       </ion-list>
     </ion-content>
   </ng-template>
