Primera version de vista productos

--- a/src/app/pages/login/singup/singup.page.html
+++ b/src/app/pages/login/singup/singup.page.html
@@ -90,7 +90,7 @@
       </div>
 
       <div class="button-container-login" flex-direction="column">
-        <ion-button color="primary" [routerLink]="['/login']">Back</ion-button>
+        <ion-button color="primary" [routerLink]="['/home']">Back</ion-button>
       </div>
       
     </div>
