--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -11,8 +11,8 @@
         <ion-button [routerLink]="['/login']">
           <ion-label>Ofertas</ion-label>
         </ion-button>
-        <ion-button [routerLink]="['/login']">
-          <ion-label>XXXXXXXX</ion-label>
+        <ion-button [routerLink]="['/shopping-cart']">
+          <ion-icon name="cart"></ion-icon>
         </ion-button>
       </div>
     </ion-buttons>
