--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -6,16 +6,30 @@
 
 <ion-content [fullscreen]="true">
   <div class="searchbar-container">
-    <h2 (click)="toggleCategories()" class="categories-title">Categorías</h2>
+    <div class="categories-title" (click)="toggleCategories()">
+      <h2>Categorías</h2>
+      <img
+        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAZklEQVR4nO3QMQqAQAxE0X8JxfvfQ2vFzsbjKIJbitlNos18GEj3IKCUUsrRBBzBGy3wkgDPFrgDtkB0Bwbru6PwKjQKb0K9uAttxUPQWjwUteIp6Bueij7hn6ClHljvXbdSit86AUl3ltPxBzVwAAAAAElFTkSuQmCC">
+    </div>
     <ion-searchbar placeholder="Buscar..."></ion-searchbar>
   </div>
   <div *ngIf="showCategories" class="categories-list">
     <ion-list>
-      <ion-item *ngFor="let category of categories">{{ category }}</ion-item>
+      <ion-item *ngFor="let c of mainCategories">{{ c.name_category }}</ion-item>
     </ion-list>
   </div>
 
-  <ion-footer class="footer">
+  <ion-item *ngFor="let p of products" (click)="idSelected = p.id_product; setInformationForOneProduct()">
+    <ion-thumbnail slot="start">
+      <img [src]="p.image_product">
+    </ion-thumbnail>
+    <ion-label>
+      <h2>{{ p.name_product }}</h2>
+      <p>{{ p.price_product }}</p>
+    </ion-label>
+  </ion-item>
+
+  <ion-footer>
     <app-footer></app-footer>
   </ion-footer>
 </ion-content>
