--- a/src/app/pages/categories/categories.component.scss
+++ b/src/app/pages/categories/categories.component.scss
@@ -1,37 +1,77 @@
 ion-content {
-    --background: var(--ion-color-background);
-    --color: var(--ion-color-background-contrast);
-    font-family: 'Montserrat', sans-serif;
+  --background: var(--ion-color-background);
+  --color: var(--ion-color-background-contrast);
+  font-family: 'Montserrat', sans-serif;
 }
 
 .searchbar-container {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: #f8f8f8;
+position: relative; /* Añadir esta línea */
+display: flex;
+align-items: center;
+padding: 10px;
+background-color: var(--ion-color-background-shade);
 }
 
 .categories-title {
-    cursor: pointer;
-    margin: 0;
-    padding: 10px 10px 10px 0;
-    font-size: 1.2em;
-    color: var(--ion-color-bakground-contrast);
-    white-space: nowrap;
+display: flex;
+align-items: center;
+cursor: pointer;
+margin: 0;
+padding: 10px 10px 10px 0;
+font-size: 1.2em;
+color: var(--ion-color-background-contrast);
+white-space: nowrap;
+}
+
+.categories-title h2 {
+font-size: 20px;
+margin: 0;
+padding-right: 5px;
+}
+
+.categories-title img { 
+width: 10px;
 }
 
 ion-searchbar {
-    --background: #ffffff;
-    --color: #000000;
-    flex: 1;
-  }
-  
-  .categories-list {
-    padding: 10px 0;
-  }
-  
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
+--background: #ffffff;
+--color: #000000;
+flex: 1;
+}
+
+.categories-list {
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 5px 0;
+  background-color: var(--ion-color-background);
+  z-index: 1000;
+  box-shadow: 0 2px 4px var(--ion-color-background-shade);
+  max-height: 200px;
+  max-width: 50%;
+  overflow-y: auto;
+}
+
+.categories-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.categories-list::-webkit-scrollbar-track {
+  background: var(--ion-color-background-shade);
+  border-radius: 10px;
+}
+
+.categories-list::-webkit-scrollbar-thumb {
+  background: var(--ion-color-primary);
+  border-radius: 10px;
+  border: 2px solid var(--ion-color-background-shade);
+}
+
+.categories-list ion-item {
+  font-size: 14px;
+}
+
+.categories-list ion-item:hover {
+  font-weight: bold;
+  --background: var(--ion-color-background-shade);
+}
