--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,5 +1,7 @@
-ion-header {
-  font-family: "Montserrat", sans-serif;
+ion-header,
+p,
+ion-title {
+  font-family: 'Montserrat', sans-serif;
 }
 
 ion-button {
@@ -11,6 +13,7 @@ ion-button {
     ion-item {
       ion-label {
         --color: var(--ion-color-primary);
+        font-family: 'Montserrat', sans-serif;
       }
 
       ion-icon {
@@ -24,31 +27,35 @@ ion-button {
   ion-list {
     ion-item {
       --color: var(--ion-color-primary);
+      font-family: 'Montserrat', sans-serif;
     }
   }
 }
 
 .toolbar-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    border: 1rem;
-    @media (max-width: 800px) {
-        display: none;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+  border: 1rem;
+
+  @media (max-width: 800px) {
+    display: none;
+  }
 }
 
 #slide-menu {
-    display: none;
-    @media (max-width: 800px) {
-        display: block;
-    }
+  display: none;
+
+  @media (max-width: 800px) {
+    display: block;
+  }
 }
 
-.prueba{
-    display: block;
-    @media (max-width: 600px) {
-        display: none;
-    }
+.prueba {
+  display: block;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
