--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,22 +1,24 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start">  
       <ion-button id="slide-menu">
         <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
       </ion-button>
       <div class="toolbar-row">
-        <ion-button [routerLink]="['/login']">
+        <ion-button [routerLink]="['/categories']">
           <ion-label>Categorias</ion-label>
         </ion-button>
         <ion-button [routerLink]="['/login']">
-          <ion-label>Ofertas</ion-label>
+          <ion-label>Carrito</ion-label>
         </ion-button>
         <ion-button [routerLink]="['/login']">
-          <ion-label>XXXXXXXX</ion-label>
+          <ion-label>Me gusta</ion-label>
         </ion-button>
       </div>
     </ion-buttons>
-    <ion-title mode="ios">Markmelo</ion-title>
+    <ion-title mode="ios">
+      <ion-button color="false" [routerLink]="['/home']">MARKMELO</ion-button>
+    </ion-title>
     <ion-buttons slot="end">
       <ion-button id="profile-menu">
         <div *ngIf="userData !== undefined">
@@ -35,15 +37,15 @@
   <ng-template>
     <ion-content style="border-radius: 50">
       <ion-list>
-        <ion-item [button]="true" [detail]="false">
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
           <ion-icon name="apps"> </ion-icon>
           <ion-label style="padding: 1rem;">Categorias</ion-label>
         </ion-item>
-        <ion-item [button]="true" [detail]="false">
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
           <ion-icon name="cart"></ion-icon>
           <ion-label style="padding: 1rem;">Carrito</ion-label>
         </ion-item>
-        <ion-item [button]="true" [detail]="false">
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
           <ion-icon name="heart"></ion-icon>
           <ion-label style="padding: 1rem;">Deseados</ion-label>
         </ion-item>
