--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,5 @@
-
-<ion-content>
-  <app-header [userData]="userData" ></app-header>
+<app-header></app-header>
+<ion-content fullscreen="true">
   <app-banner [banners]="banners"></app-banner>
   <app-vista-productos [products]="products" [mainCategories]="mainCategories"></app-vista-productos>
   <app-footer></app-footer>
