--- a/src/app/pages/home/vista-productos/vista-productos.component.html
+++ b/src/app/pages/home/vista-productos/vista-productos.component.html
@@ -27,7 +27,7 @@
 </div>
 <div>
   <HR noshade size="5" width="100%" align="center" />
-  <h3 class="titulos">Vistos recientemente</h3>
+  <h3 class="titulos">Favoritos</h3>
   <HR noshade size="5" width="100%" align="center" />
   <swiper-container
     [modules]="swiperModules"
@@ -60,7 +60,7 @@
 </div>
 <div>
   <HR noshade size="5" width="100%" align="center" />
-  <h3 class="titulos">Vistos recientemente</h3>
+  <h3 class="titulos">Ofertas</h3>
   <HR noshade size="5" width="100%" align="center" />
   <swiper-container
     [modules]="swiperModules"
@@ -93,7 +93,7 @@
 </div>
 <div>
   <HR noshade size="5" width="100%" align="center" />
-  <h3 class="titulos">Vistos recientemente</h3>
+  <h3 class="titulos">Los mas comprados</h3>
   <HR noshade size="5" width="100%" align="center" />
   <swiper-container
     [modules]="swiperModules"
@@ -126,7 +126,7 @@
 </div>
 <div>
   <HR noshade size="5" width="100%" align="center" />
-  <h3 class="titulos">Vistos recientemente</h3>
+  <h3 class="titulos">Los mas vistos</h3>
   <HR noshade size="5" width="100%" align="center" />
   <swiper-container
     [modules]="swiperModules"
@@ -157,36 +157,3 @@
     </swiper-slide>
   </swiper-container>
 </div>
-<div>
-  <HR noshade size="5" width="100%" align="center" />
-  <h3 class="titulos">Vistos recientemente</h3>
-  <HR noshade size="5" width="100%" align="center" />
-  <swiper-container
-    [modules]="swiperModules"
-    [breakpoints]="breakpointsForProducts"
-    [autoHeight]="true"
-    [slidesPerView]="2"
-    [spaceBetween]="10"
-    [mousewheel]="{
-      forceToAxis: true,
-      invert: false,
-      releaseOnEdges: true,
-      sensitivity: 1
-    }"
-  >
-    <swiper-slide
-      *ngFor="let p of products"
-      (click)="idSelected = p.id_product; setInformationForOneProduct()"
-    >
-      <ion-card button="true" loading="lazy" mode="md">
-        <img [src]="p.image_product" loading="lazy" />
-        <ion-card-title>
-          {{ p.name_product }}
-        </ion-card-title>
-        <ion-card-subtitle>
-          {{ p.price_product | currency : "USD" }}
-        </ion-card-subtitle>
-      </ion-card>
-    </swiper-slide>
-  </swiper-container>
-</div>  
