--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -6,13 +6,16 @@
       </ion-button>
       <div class="toolbar-row">
         <ion-button [routerLink]="['/categories']">
-          <ion-label>Categorias</ion-label>
-        </ion-button>
-        <ion-button [routerLink]="['/login']">
-          <ion-label>Carrito</ion-label>
+          <ion-icon name="heart"></ion-icon>
+          <ion-label style="padding: 0.5rem;">Lista de deseos</ion-label>
         </ion-button>
         <ion-button [routerLink]="['/shopping-cart']">
           <ion-icon name="cart"></ion-icon>
+          <ion-label style="padding: 0.5rem;">Carrito</ion-label>
+        </ion-button>
+        <ion-button [routerLink]="['/shopping-cart']">
+          <ion-icon name="timer-outline"></ion-icon>
+          <ion-label style="padding: 0.5rem;">Historial</ion-label>
         </ion-button>
       </div>
     </ion-buttons>
@@ -38,16 +41,16 @@
     <ion-content style="border-radius: 50">
       <ion-list>
         <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
-          <ion-icon name="apps"> </ion-icon>
-          <ion-label style="padding: 1rem;">Categorias</ion-label>
-        </ion-item>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
           <ion-icon name="cart"></ion-icon>
-          <ion-label style="padding: 1rem;">Carrito</ion-label>
+          <ion-label style="padding: 1rem;">Lista de deseos</ion-label>
         </ion-item>
         <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
           <ion-icon name="heart"></ion-icon>
-          <ion-label style="padding: 1rem;">Deseados</ion-label>
+          <ion-label style="padding: 1rem;">Carrito</ion-label>
+        </ion-item>
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
+          <ion-icon name="timer-outline"></ion-icon>
+          <ion-label style="padding: 1rem;">Historial</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
