--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,29 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">  
-      <ion-button id="slide-menu">
-        <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
-      </ion-button>
-      <div class="toolbar-row">
-        <ion-button [routerLink]="['/categories']">
-          <ion-icon name="heart"></ion-icon>
-          <ion-label style="padding: 0.5rem;">Lista de deseos</ion-label>
-        </ion-button>
-        <ion-button [routerLink]="['/shopping-cart']">
-          <ion-icon name="cart"></ion-icon>
-          <ion-label style="padding: 0.5rem;">Carrito</ion-label>
-        </ion-button>
-        <ion-button [routerLink]="['/shopping-cart']">
-          <ion-icon name="timer-outline"></ion-icon>
-          <ion-label style="padding: 0.5rem;">Historial</ion-label>
-        </ion-button>
-      </div>
+    <ion-buttons slot="start">
+      <ion-button class="slide-menu" (click)="presentPopoverMenu($event)">
+							<ion-icon slot="icon-only" name="menu-outline"></ion-icon>
+						</ion-button>
+						<div class="toolbar-row">
+							<ion-button [routerLink]="['/categories']">
+									<ion-icon name="heart"></ion-icon>
+									<ion-label style="padding: 0.5rem;">Lista de deseos</ion-label>
+							</ion-button>
+							<ion-button [routerLink]="['/shopping-cart']">
+									<ion-icon name="cart"></ion-icon>
+									<ion-label style="padding: 0.5rem;">Carrito</ion-label>
+							</ion-button>
+							<ion-button [routerLink]="['/shopping-cart']">
+									<ion-icon name="timer-outline"></ion-icon>
+									<ion-label style="padding: 0.5rem;">Historial</ion-label>
+							</ion-button>
+					</div>
+
     </ion-buttons>
     <ion-title mode="ios">
-      <ion-button color="false" [routerLink]="['/home']">MARKMELO</ion-button>
+      <ion-button color="false" [routerLink]="['/home']"
+        >M A R K M E L O</ion-button
+      >
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button id="profile-menu">
+      <ion-button (click)="presentPopoverProfile($event)">
         <div *ngIf="userData !== undefined">
           <p class="prueba">" {{ userData.username_user }} "</p>
         </div>
@@ -36,53 +39,66 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-popover trigger="slide-menu" [dismissOnSelect]="true" class="left-menu">
+<ion-popover #popoverMenu [isOpen]="isOpenMenu" (didDismiss)="isOpenMenu = false" class="left-menu">
   <ng-template>
     <ion-content style="border-radius: 50">
       <ion-list>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
+        <ion-item
+          [button]="true"
+          [detail]="false"
+          [routerLink]="['/categories']"
+										(click)="closePopoverMenu()"
+        >
           <ion-icon name="cart"></ion-icon>
-          <ion-label style="padding: 1rem;">Lista de deseos</ion-label>
+          <ion-label style="padding: 1rem">Lista de deseos</ion-label>
         </ion-item>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
+        <ion-item
+          [button]="true"
+          [detail]="false"
+          [routerLink]="['/login']"
+										(click)="closePopoverMenu()"
+        >
           <ion-icon name="heart"></ion-icon>
-          <ion-label style="padding: 1rem;">Carrito</ion-label>
+          <ion-label style="padding: 1rem">Carrito</ion-label>
         </ion-item>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/categories']">
+        <ion-item
+          [button]="true"
+          [detail]="false"
+          [routerLink]="['/categories']"
+										(click)="closePopoverMenu()"
+        >
           <ion-icon name="timer-outline"></ion-icon>
-          <ion-label style="padding: 1rem;">Historial</ion-label>
+          <ion-label style="padding: 1rem">Historial</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
   </ng-template>
 </ion-popover>
 
-<ion-popover trigger="profile-menu" [dismissOnSelect]="true" class="login">
+<ion-popover #popoverProfile [isOpen]="isOpenProfile" (didDismiss)="isOpenProfile = false" class="login">
   <ng-template>
-    <ion-content *ngIf="userData;">
+    <ion-content *ngIf="userData">
       <ion-list>
         <ion-item
           [detail]="false"
           [button]="true"
           [routerLink]="['/editar-perfil']"
-          >
-          <ion-label aria-flowto="true">{{userData.username_user}}</ion-label> 
+										(click)="closePopoverProfile()"
+        >
+          <ion-label aria-flowto="true">{{ userData.username_user }}</ion-label>
           <ion-icon name="create" color="primary"></ion-icon>
         </ion-item>
-        <ion-item 
-          [button]="true" 
-          [detail]="false" 
-          (click)="makeLogout()"
+        <ion-item [button]="true" [detail]="false" (click)="	closePopoverProfile(); makeLogout()"
           >cerrar sesion</ion-item
         >
       </ion-list>
     </ion-content>
     <ion-content *ngIf="!userData">
       <ion-list>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/login']"
+        <ion-item [button]="true" [detail]="false" (click)="closePopoverProfile()" [routerLink]="['/login']" 
           >iniciar sesion</ion-item
         >
-        <ion-item [button]="true" [detail]="false" [routerLink]="['/singup']"
+        <ion-item [button]="true" [detail]="false" (click)="closePopoverProfile()" [routerLink]="['/singup']" 
           >registrarse</ion-item
         >
       </ion-list>
