--- a/src/app/pages/home/vista-productos/vista-productos.component.html
+++ b/src/app/pages/home/vista-productos/vista-productos.component.html
@@ -54,6 +54,14 @@
         <ion-card-subtitle>
           {{ p.price_product | currency : "USD" }}
         </ion-card-subtitle>
+        <ion-buttons class="buttons-heart-cart">
+          <ion-button class="heart-button" (click)="navigateToLogin($event)">
+            <ion-icon name="heart"></ion-icon>
+          </ion-button>
+          <ion-button class="cart-button" (click)="navigateToCart($event)">
+            <ion-icon name="cart"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-card>
     </swiper-slide>
   </swiper-container>
@@ -87,6 +95,14 @@
         <ion-card-subtitle>
           {{ p.price_product | currency : "USD" }}
         </ion-card-subtitle>
+        <ion-buttons class="buttons-heart-cart">
+          <ion-button class="heart-button" (click)="navigateToLogin($event)">
+            <ion-icon name="heart"></ion-icon>
+          </ion-button>
+          <ion-button class="cart-button" (click)="navigateToCart($event)">
+            <ion-icon name="cart"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-card>
     </swiper-slide>
   </swiper-container>
@@ -120,6 +136,14 @@
         <ion-card-subtitle>
           {{ p.price_product | currency : "USD" }}
         </ion-card-subtitle>
+        <ion-buttons class="buttons-heart-cart">
+          <ion-button class="heart-button" (click)="navigateToLogin($event)">
+            <ion-icon name="heart"></ion-icon>
+          </ion-button>
+          <ion-button class="cart-button" (click)="navigateToCart($event)">
+            <ion-icon name="cart"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-card>
     </swiper-slide>
   </swiper-container>
@@ -142,17 +166,25 @@
     }"
   >
     <swiper-slide
-      *ngFor="let p of products"
-      (click)="idSelected = p.id_product; setInformationForOneProduct()"
+      *ngFor="let tview of topViewedProducts"
+      (click)="idSelected = tview.id_product; setInformationForOneProduct()"
     >
       <ion-card button="true" loading="lazy" mode="md">
-        <img [src]="p.image_product" loading="lazy" />
+        <img [src]="tview.image_product" loading="lazy" />
         <ion-card-title>
-          {{ p.name_product }}
+          {{ tview.name_product }}
         </ion-card-title>
         <ion-card-subtitle>
-          {{ p.price_product | currency : "USD" }}
+          {{ tview.price_product | currency : "USD" }}
         </ion-card-subtitle>
+        <ion-buttons class="buttons-heart-cart">
+          <ion-button class="heart-button" (click)="navigateToLogin($event)">
+            <ion-icon name="heart"></ion-icon>
+          </ion-button>
+          <ion-button class="cart-button" (click)="navigateToCart($event)">
+            <ion-icon name="cart"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-card>
     </swiper-slide>
   </swiper-container>
