Se agrega cantidad de productos en shopping cart page y su services Mejoras de front en register , editar perfil , products ,  shopping cart y gallery product

--- a/src/app/pages/products/gallery-product/gallery-product.component.scss
+++ b/src/app/pages/products/gallery-product/gallery-product.component.scss
@@ -13,3 +13,15 @@
 .mySwiper2 .swiper-slide-thumb-active{
     opacity: 1;
 }
+
+.mySwiper img {
+    width: 300px;
+    height: 300px; 
+    display: block; /* Asegura que la imagen se comporte como un bloque */
+    margin: 0 auto; /* Centra la imagen horizontalmente */
+}
+
+div {
+    width: 100%; 
+    height: 160%; 
+}
