--- a/src/app/pages/home/editar-perfil/editar-perfil.page.html
+++ b/src/app/pages/home/editar-perfil/editar-perfil.page.html
@@ -4,24 +4,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
 
   <form [formGroup]="editar" class="ion-padding">
-    <div class="button-container-login">
-
-      <ion-card-content>
-        <div *ngIf="userData">
-          <p style="text-align: center">
-            Username: {{ userData.results[0].username_user }}
-          </p>
-        </div>
-        <div *ngIf="!userData">
-          <p style="text-align: center">Loading user data...</p>
-        </div>
-      </ion-card-content>
+    <div class="edit-container">
 
       <ion-card>
-
+        <ion-card-header>
+          <ion-card-title class="ion-text-center">Editar Perfil</ion-card-title>
+        </ion-card-header>
         <ion-item>
           <label for="city_user" class="ion-text-bold"></label>
           <ion-input formControlName="city_user" placeholder="Ciudad"></ion-input>
@@ -45,15 +36,13 @@
         <div *ngIf="editar.get('phone_user')?.hasError('minlength') && editar.get('phone_user')?.touched">
           <ion-text color="danger">El telefono debe tener 10 digios</ion-text>
         </div>
+        <div class="button-container-login" flex-direction="column">
+          <ion-button color="primary" [routerLink]="['/home']">Back</ion-button>
+          <ion-button (click)="updateProfile()" color="primary">actualizar</ion-button>
+        </div>
       </ion-card>
     </div>
   </form>
-
-  <ion-button (click)="updateProfile()" color="primary">actualizar</ion-button>
-
-  <div class="button-container-login" flex-direction="column">
-    <ion-button color="primary" [routerLink]="['/home']">Back</ion-button>
-  </div>
 </ion-content>
 
 <ion-footer>
