--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -4,43 +4,62 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="product" class="ion-padding">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" sizeLg="8" offsetLg="2">
+<ion-content *ngIf="product">
+  <div class="container">
 
+    <div class="gallery-container">
+      <ion-card>
         <app-gallery-product [GalleryProductComponent]="gallery_products"></app-gallery-product>
+      </ion-card>
+    </div>
 
-        <ion-card>
-          <ion-card-header>
+    <div class="info-container">
+      <ion-card class="info-card">
+        <ion-card-header>
+          <div class="title-container">
             <ion-card-title>{{ product.name_product }}</ion-card-title>
-            <ion-card-subtitle>{{ product.price_product | currency:'COP' }}</ion-card-subtitle>
-          </ion-card-header>
-          <ion-card-content>
-            <div [innerHTML]="product.description_product"></div>
-            <p><strong>Stock:</strong> {{ product.stock_product }}</p>
-            <p><strong>Delivery Time:</strong> {{ product.delivery_time_product }} days</p>
+            <ion-button class="heart-button">
+              <ion-icon slot="icon-only" name="heart"></ion-icon>
+            </ion-button>
+          </div>
+          <ion-card-subtitle>{{ product.price_product | currency:'COP ' }}</ion-card-subtitle>
+        </ion-card-header>
 
-            <div class="flex mt-6 items-center">
-              <span class="title-font font-medium text-2xl text-gray-900">{{ product.price_product | currency:'COP' }}</span>
-              <ion-button expand="block" color="primary" class="ml-auto" [routerLink]="['/shopping-cart']" (click)="addToCart(product)">
-                Agregar al carrito
-              </ion-button>
-              <ion-button fill="clear" class="ml-4" shape="round">
-                <ion-icon slot="icon-only" name="heart"></ion-icon>
-              </ion-button>
-            </div>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+        <ion-card-content>
+          <div [innerHTML]="product.summary_product"></div>
+
+          <p><strong>Stock:</strong> {{ product.stock_product }}</p>
+
+          <p><strong>Delivery Time:</strong> {{ product.delivery_time_product }} days</p>
+
+          <div class="card-container">
+            <ion-button expand="block" color="primary" class="cart-button" [routerLink]="['/shopping-cart']"
+              (click)="addToCart(product)">
+              Agregar al carrito
+            </ion-button>
+          </div>
+        </ion-card-content>
+      </ion-card>
+    </div>
+  </div>
+  <div>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Descripción</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <div [innerHTML]="product.description_product"></div>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 
   <ion-footer>
     <app-footer></app-footer>
   </ion-footer>
 
 </ion-content>
+
 
 
 
@@ -75,5 +94,3 @@
   </ion-footer>
 
 </ion-content-->
-
-
